--- a/html/productos.html
+++ b/html/productos.html
@@ -49,9 +49,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Productos</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ubicacion.html">Ubicacion</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -60,8 +57,8 @@
     <!-- Contenido -->
     <main>
         <div class="row justify-content-center align-items-center ProductosCards">
-            <div class="col-lg-6 col-md-4 col-sm-2">
-                <div class="ProductosCard" style="width: 35rem;">
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="ProductosCard" style="width: 50%;">
                     <img src="../img/cafe-espresso.jpg" class="card-img-top" alt="Cafe Espresso">
                     <div class="card-body">
                         <h5 class="card-title">Espresso</h5>
@@ -71,8 +68,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-4 col-sm-2">
-                <div class="ProductosCard" style="width: 35rem;">
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="ProductosCard" style="width: 50%;">
                     <img src="../img/Espresso_Americano.jpeg" class="card-img-top" alt="Cafe Americano">
                     <div class="card-body">
                         <h5 class="card-title">Americano</h5>
@@ -82,8 +79,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-4 col-sm-2">
-                <div class="ProductosCard" style="width: 35rem;">
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="ProductosCard" style="width: 50%;">
                     <img src="../img/Cafe-Latte.jpg" class="card-img-top" alt="Cafe Latte">
                     <div class="card-body">
                         <h5 class="card-title">Latte</h5>
@@ -93,8 +90,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-4 col-sm-2">
-                <div class="ProductosCard" style="width: 35rem;">
+            <div class="col-lg-6 col-md-4 col-sm-6">
+                <div class="ProductosCard" style="width: 50%;">
                     <img src="../img/Cafe-capuccino.jpg" class="card-img-top" alt="Cappuccino">
                     <div class="card-body">
                         <h5 class="card-title">Cappuccino</h5>
@@ -104,8 +101,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-4 col-sm-2">
-                <div class="ProductosCard" style="width: 35rem;">
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="ProductosCard" style="width: 50%;">
                     <img src="../img/Macchiato.jpg" class="card-img-top" alt="Macchiato">
                     <div class="card-body">
                         <h5 class="card-title">Macchiato</h5>
@@ -115,8 +112,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-4 col-sm-2">
-                <div class="ProductosCard" style="width: 35rem;">
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="ProductosCard" style="width: 50%;">
                     <img src="../img/Cafe-Mocha.jpg" class="card-img-top" alt="Cafe Mocha">
                     <div class="card-body">
                         <h5 class="card-title">Mocha</h5>
