--- a/html/productos.html
+++ b/html/productos.html
@@ -33,7 +33,7 @@
 
     <nav class="navbar navbar-expand-lg">
         <div class="mx-3 container-fluid">
-            <a class="navbar-brand" href="#"><img src="../img/astronaut.png" alt="astro" width="40px" height="40px"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../img/astronaut.png" alt="astro" width="40px" height="40px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <pan class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
     <!-- Contenido -->
     <main>
         <div class="row justify-content-center align-items-center ProductosCards">
-            <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="col-lg-6 col-md-6 col-sm-6 my-5">
                 <div class="ProductosCard" style="width: 50%;">
                     <img src="../img/cafe-espresso.jpg" class="card-img-top" alt="Cafe Espresso">
                     <div class="card-body">
@@ -68,7 +68,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="col-lg-6 col-md-6 col-sm-6 my-5">
                 <div class="ProductosCard" style="width: 50%;">
                     <img src="../img/Espresso_Americano.jpeg" class="card-img-top" alt="Cafe Americano">
                     <div class="card-body">
@@ -79,7 +79,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="col-lg-6 col-md-6 col-sm-6 my-5">
                 <div class="ProductosCard" style="width: 50%;">
                     <img src="../img/Cafe-Latte.jpg" class="card-img-top" alt="Cafe Latte">
                     <div class="card-body">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-4 col-sm-6">
+            <div class="col-lg-6 col-md-4 col-sm-6 my-5">
                 <div class="ProductosCard" style="width: 50%;">
                     <img src="../img/Cafe-capuccino.jpg" class="card-img-top" alt="Cappuccino">
                     <div class="card-body">
@@ -101,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="col-lg-6 col-md-6 col-sm-6 my-5">
                 <div class="ProductosCard" style="width: 50%;">
                     <img src="../img/Macchiato.jpg" class="card-img-top" alt="Macchiato">
                     <div class="card-body">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="col-lg-6 col-md-6 col-sm-6 my-5">
                 <div class="ProductosCard" style="width: 50%;">
                     <img src="../img/Cafe-Mocha.jpg" class="card-img-top" alt="Cafe Mocha">
                     <div class="card-body">
