--- a/html/sobreNosotros.html
+++ b/html/sobreNosotros.html
@@ -33,7 +33,7 @@
 
     <nav class="navbar navbar-expand-lg">
         <div class="mx-3 container-fluid">
-            <a class="navbar-brand" href="#"><img src="../img/astronaut.png" alt="astro" width="40px" height="40px"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../img/astronaut.png" alt="astro" width="40px" height="40px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
