--- a/html/productos.html
+++ b/html/productos.html
@@ -49,6 +49,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Productos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ubicacion.html">Ubicacion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
                 </ul>
             </div>
         </div>
