--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="html/productos.html">Productos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="html/ubicacion.html">Ubicacion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="html/contacto.html">Contacto</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -136,28 +142,6 @@
                         seleccionados, y elaborados a mano para tu máximo disfrute.</p>
                     <p class="card-text"><small class="text-body-secondary">Ultima actualizacion hace 3 minutos</small>
                     </p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- MAPA -->
-    <div class="divMapa">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="mapa">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4113.156270363254!2d-61.52939545237828!3d-34.86940008900755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c744a7036077cb%3A0xa51ef767db403844!2sLeandro%20N.%20Alem%2C%20Lincoln%2C%20Provincia%20de%20Buenos%20Aires!5e1!3m2!1ses-419!2sar!4v1693500111716!5m2!1ses-419!2sar"
-                            width="320" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="textoMapa">
-                        <h2>Ubicacion</h2>
-                        <p>Lincoln, Buenos Aires</p>
-                    </div>
                 </div>
             </div>
         </div>
